Closed Bug 1020629 Opened 11 years ago Closed 11 years ago

DrawTargetSkia::CopySurface is broken with A8 surfaces

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla33

People

(Reporter: jrmuizel, Assigned: jrmuizel)

References

Details

Attachments

(1 file, 1 obsolete file)

This fixes this for some of the cases. It should also make CopySurface faster some of the time. Skia could really use a better api for this...
Attachment #8434478 - Attachment is obsolete: true
Attachment #8435828 - Flags: review?(gwright)
Comment on attachment 8435828 [details] [diff] [review] DrawTargetSkia::CopySurface is broken with A8 surfaces Review of attachment 8435828 [details] [diff] [review]: ----------------------------------------------------------------- Would prefer a #ifdef rather than if(false) with a semi-descriptive define, but looks fine.
Attachment #8435828 - Flags: review?(gwright) → review+
Assignee: nobody → jmuizelaar
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla33
Depends on: 1237352
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: