Bug 1020629. DrawTargetSkia::CopySurface is broken with A8 surfaces. r=gw280

If we clear the surface before doing drawBitmap we end up with
the right results. This also adds some writePixels code
that we could try out later.